RESOLVED FIXED165067
Fix exception scope verification failures in runtime/String* files.
https://bugs.webkit.org/show_bug.cgi?id=165067
Summary Fix exception scope verification failures in runtime/String* files.
Mark Lam
Reported 2016-11-24 13:31:24 PST
Patch coming.
Attachments
proposed patch. (19.79 KB, patch)
2016-11-24 13:34 PST, Mark Lam
saam: review+
Mark Lam
Comment 1 2016-11-24 13:34:34 PST
Created attachment 295417 [details] proposed patch.
Mark Lam
Comment 2 2016-11-28 14:36:41 PST
Thanks for the review. Landed in r209022: <http://trac.webkit.org/r209022>.
Note You need to log in before you can comment on or make changes to this bug.