Source/JavaScriptCore/runtime/StringConstructor.cpp
@@ -114,6 +114,7 @@ static EncodedJSValue JSC_HOST_CALL stringFromCodePoint(ExecState* exec)
         }
     }
 
+    scope.release();
     return JSValue::encode(jsString(exec, builder.toString()));
 }
 
@@ -128,7 +129,9 @@ static EncodedJSValue JSC_HOST_CALL constructWithStringConstructor(ExecState* ex
 
     if (!exec->argumentCount())
         return JSValue::encode(StringObject::create(vm, structure));
-    return JSValue::encode(StringObject::create(vm, structure, exec->uncheckedArgument(0).toString(exec)));
+    JSString* str = exec->uncheckedArgument(0).toString(exec);
+    RETURN_IF_EXCEPTION(scope, encodedJSValue());
+    return JSValue::encode(StringObject::create(vm, structure, str));
 }
 
 ConstructType StringConstructor::getConstructData(JSCell*, ConstructData& constructData)
